data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3313.wast
;; 2. **Test Description**:    - **Scenario**: Define a function that takes no arguments and place an `unreachable` instruction right after calling this function. Ensure the stack has some elements before the call.    - **Constraint Checked**: Ensure argument check and stack alignment are handled correctly.    - **Unreachable Code Execution**: If the argument expectations are not met correctly, the `unreachable` instruction should not be erroneously reached due to a stack handling bug.    - **Expected Differential Behaviour**: wizard_engine should trap during function call if stack alignment is incorrect, whereas the WebAssembly implementation might only trap at the `unreachable` step.

(assert_invalid
  (module
    (type (func))
    (func $check-stack-alignment (call 1) unreachable)
    (func (result i32) (i32.const 42))
  )
  "type mismatch"
)